Fixed WPML switcher having white/invisible text in some instances, fixes #263

--- a/framework/compat/wpml/wpml.css
+++ b/framework/compat/wpml/wpml.css
@@ -47,6 +47,7 @@
 	border: 1px solid #f2f2f2;
 	border-color: rgba(220,220,220,.4);
 	border-bottom: none;
+	color: #666;
 	display: block;
 	line-height: 1;
 	padding: 6px 8px;
